--- a/config/config.example.json
+++ b/config/config.example.json
@@ -4,7 +4,8 @@
     "password": null,
     "database": "nombre de tu base de datos",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "jwt_secret":"el secretito"
   },
   "test": {
     "username": "root",
